temaplates title align issue fixed

--- a/agile-frontend/WebContent/flatfull/css/core/migration.css
+++ b/agile-frontend/WebContent/flatfull/css/core/migration.css
@@ -2018,7 +2018,7 @@ display: block!important;
  .ticket-filter-conditions-table tbody tr td input {padding: 6px 5px;}
 
  /*Marketing Modules Responsive Style Start*/
-  .landing-pages-title,.forms-title,.prefs-title,.social-suite-title,.push-notification-title{
+  .landing-pages-title,.forms-title,.templates-title,.prefs-title,.social-suite-title,.push-notification-title{
     font-size: 18px !important;
   }
   .add-landing-pages-btn,.add-form-btn,.add-push-notify-btn{
